Too much work for those icons

--- a/SpaceDashboard/src/lib/styles/variables.scss
+++ b/SpaceDashboard/src/lib/styles/variables.scss
@@ -3,7 +3,7 @@
 	--grey-2: #353942;
 	--grey-3: #495058;
 	--grey-4: #878e96;
-	--grey-5: #aeb5bd;
+	--grey-5: #5c677b;
 	--grey-6: #cfd3dc;
 	--grey-7: #dee1e6;
 	--grey-8: #e8ecef;
