--- a/SpaceDashboard/src/lib/styles/global.scss
+++ b/SpaceDashboard/src/lib/styles/global.scss
@@ -2,7 +2,15 @@
 	margin: 0;
 	padding: 0;
 }
+:root {
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+}
 body {
 	background: #081b3d;
 	padding-inline: 40px;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
 }
