--- a/SpaceDashboard/src/lib/styles/utils.scss
+++ b/SpaceDashboard/src/lib/styles/utils.scss
@@ -8,10 +8,7 @@
 	border-radius: 15px;
 	font-size: 20px;
 	box-sizing: border-box;
-	.heading {
-		padding-bottom: 10px;
-		font-size: 24px;
-	}
+
 	.divider {
 		display: flex;
 	}
@@ -20,11 +17,6 @@
 		width: 100%;
 	}
 
-	.label {
-		padding-top: 8px;
-		color: var(--grey-3);
-		font-size: 18px;
-	}
 	.links {
 		display: flex;
 		padding-top: 10px;
@@ -51,7 +43,20 @@
 		}
 	}
 }
-
+.info {
+	font-size: 20px;
+	color: var(--blue-2);
+}
+.label {
+	padding-top: 8px;
+	color: var(--grey-3);
+	font-size: 18px;
+}
+.heading {
+	padding-bottom: 10px;
+	font-size: 24px;
+	color: var(--blue-2);
+}
 .noSelect {
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
